apps/base/romm/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: romm
  namespace: romm
  labels:
    app.kubernetes.io/name: romm
spec:
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: networking
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      app.kubernetes.io/controller: romm
      app.kubernetes.io/instance: romm
      app.kubernetes.io/name: romm
  policyTypes:
    - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: romm-database
  namespace: romm
  labels:
    app.kubernetes.io/name: romm
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/component: backup
        - podSelector:
            matchLabels:
              app.kubernetes.io/controller: romm
              app.kubernetes.io/instance: romm
              app.kubernetes.io/name: romm
      ports:
        - port: 5432
          protocol: TCP
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - port: 8000
          protocol: TCP
  podSelector:
    matchLabels:
      cnpg.io/cluster: romm-database
  policyTypes:
    - Ingress
